# CPPServer

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
server/templates/: cookie.html  index.html  submit.html
source/include/: Config.h  Defs.h  HttpRequest.h  HttpResponse.h  HttpServer.h  HttpStatus.h  MimeType.h  Request.h  Response.h  SafeMap.h  Server.h  UploadedFile.h  Utils.h
source/src/: HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp  MimeType.cpp  Request.cpp  Response.cpp  Server.cpp  Utils.cpp
test/: test_chunked.py  test_endpoints.py  test_keepalive.py
